--- a/userChrome.css
+++ b/userChrome.css
@@ -275,7 +275,9 @@
   --firefoxcss-top-bar-border-bottom-size: 1px;
   --firefoxcss-border-radius: 10px;
   --firefoxcss-control-buttons-margin: 100px;
-  --firefoxcss-tab-min-width: 110px;
+  /*--firefoxcss-tab-min-width: 110px;*/
+  /* used to allow small tabs*/
+  --firefoxcss-tab-min-width: 40px;
   --firefoxcss-tab-max-width: 150px;
 
   --firefoxcss-searchbar-height: 30px;
